--- a/content/additional.tex
+++ b/content/additional.tex
@@ -3,8 +3,9 @@
 
 
 \small{\begin{tabular*}{\textwidth}[t]{p{\textwidth}}
-\hspace{-3.1mm}\textbf{ Computer Science: }{Deep Learning, Data Structures and Algorithms, Databases, Operating Systems, Computer Networks}\\
-\hspace{-3.1mm}\textbf{ Mathematics: }{Optimization, Discrete Maths, Probability and Random Processes, Number Theory, Linear Algebra}
+\hspace{-3.1mm}\textbf{ Leadership: }{Deep Learning, Data Structures and Algorithms, Databases, Operating Systems, Computer Networks}\\
+\hspace{-3.1mm}\textbf{ Achievements: }{KVPY Scholar | All India Rank 293 in JEE Mains 2016 | Black Belt Shotokan Karate, National Level Medalist
+}
 \end{tabular*}}
 
 \vspace{-2.5mm}
