--- a/content/experience.tex
+++ b/content/experience.tex
@@ -8,9 +8,9 @@
 {New York City, NY}
 
 \resumeItemListStart
-\item[$\bullet$] Work done list 1.
-\item[$\bullet$] Work done list 2.
-\item[$\bullet$] Work done list 3.
+\item[$\bullet$] Wrote a GraphQL-based Flask backend-service to serve data to 1000s of Bloomberg Professional App users
+\item[$\bullet$] Upgraded authorization systems of legacy Bloomberg services to JSON Web Tokens (JWT)
+\item[$\bullet$] Rewrote existing C\# services as Python microservices, improving turnaround time and maintainability
 \resumeItemListEnd
 
 
@@ -21,10 +21,10 @@
 {Bengaluru, India}
 
 \resumeItemListStart
-\item[$\bullet$] Work done list 1.
-\item[$\bullet$] Work done list 2.
-\item[$\bullet$] Work done list 3,
-\item[$\bullet$] Work done list 4.
+\item[$\bullet$] Implemented memory profiling from ground-up in C++, increasing visibility into per-component memory usage
+        \item[$\bullet$] Integrated memory usage time-series with Grafana dashboards, greatly improving failure-diagnosis time for memory crashes
+        \item[$\bullet$] Developed a detection plugin for Cisco's firewalls to identify and prune elephant flows in the network
+        \item[$\bullet$] Wrote Telegraf input plugins using GoLang to export CPU and Process related information to health-monitoring dashboards
 \resumeItemListEnd
 
 \resumeExp
@@ -34,10 +34,9 @@
 {Singapore}
 
 \resumeItemListStart
-\item[$\bullet$] Work done list 1.
-\item[$\bullet$] Work done list 2.
-\item[$\bullet$] Work done list 3,
-\item[$\bullet$] Work done list 4.
+\item[$\bullet$] {Conducted thesis work on Network Visualization in Data Centres as part of a Facebook grant}
+	    \item[$\bullet$] {Developed a network replay tool with Docker, Flask and D3.js for failure detection by correlating millions of switch packet records}
+	    \item[$\bullet$] {Improved root-cause detection of network faults, reducing failure-diagnosis time from hours to under 5 minutes} 
 \resumeItemListEnd
 
 \resumeExp
@@ -47,10 +46,9 @@
 {Bengaluru, India}
 
 \resumeItemListStart
-\item[$\bullet$] Work done list 1.
-\item[$\bullet$] Work done list 2.
-\item[$\bullet$] Work done list 3,
-\item[$\bullet$] Work done list 4.
+\item[$\bullet$]{Built an end-to-end health monitoring system with Prometheus and Grafana for Cisco's Firewalls}
+	\item[$\bullet$]{Wrote exporter programs using GoLang to serve real-time telemetry data to dashboards}
+	\item[$\bullet$]{Improved debugging capabilities with correlated dashboards and automated visual alerts}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
