--- a/content/skills.tex
+++ b/content/skills.tex
@@ -3,8 +3,8 @@
 
 \small{\begin{tabular*}{\textwidth}[t]{p{0.5\textwidth} p{0.5\textwidth}}
 
-\hspace{-3.1mm}{\textbf{ Programming languages:} C++, C, Python, C\#, Java} & {\textbf{Web Technologies:} HTML, CSS, Django, JavaScript} \\  
-\hspace{-3.1mm}{\textbf{ ML/AI:} Pytorch, Numpy, Pandas, Matplotlib} & {\textbf{Miscellaneous:} MySQL, AWS, Git, Shell, Latex, Unity}
+\hspace{-3.1mm}{\textbf{ Languages:} C++, C, Python, Java, Go} & {\textbf{Web Technologies:} Flask + Gunicorn, HTML/CSS/JS} \\  
+\hspace{-3.1mm}{\textbf{ Databases:} PostGRES, Mongo, Neo4j, Prometheus} & {\textbf{Miscellaneous:} Docker, GraphQL, Git, Grafana, Telegraf}
 \end{tabular*}}
 
 \vspace{-2.5mm}
