--- a/content/education.tex
+++ b/content/education.tex
@@ -3,13 +3,13 @@
 
 \resumeSubHeadingListStart
 \resumeEdu
-{Georgia Tech, Atlanta} 
+{Georgia Institute of Technology (Georgia Tech)} 
 {M.S. in Computer Science} 
 {Aug 2021 - May 2023} %Event Dates
 {GPA: 4.0/4.0} %Website
 \\
 \resumeEdu
-{Birla Institute of Technology and Science Pilani, India} 
+{Birla Institute of Technology and Science (BITS Pilani), India} 
 {B.Eng. in Computer Science} 
 {Aug 2016 - July 2020} %Event Dates
 {GPA: 8.90/10.0} %Website
