--- a/content/heading.tex
+++ b/content/heading.tex
@@ -1,8 +1,8 @@
 \begin{center}
-    \LARGE{\textbf{\name}}
+    \Huge{\name}
 \end{center}
 \vspace{-6.5mm}
 \begin{center}
-    \small{\href{https://github.com/\github}{\faGithub \hspace{0.2mm} github.com/\github} |  \href{https://www.linkedin.com/in/\linkedin/}{\faLinkedinSquare \hspace{0.2mm} linkedin.com/in/\linkedin} | \href{mailto:\emaila}{\faSend \hspace{0.2mm} \emaila} | \faPhone \hspace{0.2mm} +1-\phone }
+    \small{\href{https://github.com/\github}{\faGithub \hspace{0.2mm} github.com/\github} |  \href{https://www.linkedin.com/in/\linkedin/}{\faLinkedin \hspace{0.2mm} linkedin.com/in/\linkedin} | \href{mailto:\emaila}{\faEnvelope \hspace{0.2mm} \emaila} | \faPhone \hspace{0.2mm} +1-\phone }
 \end{center}
 \vspace{-3mm}
