--- a/content/projects.tex
+++ b/content/projects.tex
@@ -8,7 +8,7 @@
 {\href{https://github.com/}{git.io/xxxx}} 
 \resumeItemListStart
     \item[$\bullet$]{Modelled college courses, instructors and classrooms in Neo4j to create a timetable recommendation system}
-	\item[$\bullet$]{Considered user inputs: location, instructor, time, days and field to automate CypherQL query generation and ranking of course plans}
+	\item[$\bullet$]{Considered user inputs: location, instructor, time, field to automate CypherQL query generation and ranking of course plans}
 	\item[$\bullet$]{Reduced the time taken by students to decide a course plan from 3-4 hours to 5 minutes}
 \resumeItemListEnd
 
@@ -25,25 +25,15 @@
 \resumeItemListEnd
 
 \resumeProject
-{Project 3} %Project Name
-{Students' Web Committee, IIT Guwahati} %Project Name, Location Name
-{Jan 2020 - Apr 2020} %Event Dates
+{MapReduce Framework Implementation} %Project Name
+{Georgia Tech} %Project Name, Location Name
+{} %Event Dates
 {\href{https://github.com/}{git.io/xxxx}} %Website
 \resumeItemListStart
-\item[$\bullet$] Project Description 1
-\item[$\bullet$] Project Description 2
+\item[$\bullet$]{Used gRPC to build a MapReduce Framework with a Master, Mappers and Reducers}
+	\item[$\bullet$]{Implemented input sharding, queuing and RPC timeout mechanisms to handle worker failures}
 \resumeItemListEnd
 
-
-\resumeProject
-{Other Projects}{}{}{}
-\vspace{-3.5mm}
-\resumeItemListStart
-\item[$\bullet$] \textbf{Project 4 \raisebox{-0.3mm}{\href{https://github.com/}{\footnotesize\faExternalLink}} :} Project Description
-
-\item[$\bullet$] \textbf{Project 5 \raisebox{-0.3mm}{\href{https://github.com/}{\footnotesize\faExternalLink}} :} Project Description
-
-\resumeItemListEnd
 \resumeSubHeadingListEnd
 
 \vspace{-5.5mm}
