--- a/content/experience.tex
+++ b/content/experience.tex
@@ -15,7 +15,7 @@
 
 
 \resumeExp
-{Cisco}
+{Cisco Systems}
 {Software Engineer, Cloud and Network Security}
 {Aug 2020 - Jun 2021}
 {Bengaluru, India}
@@ -40,13 +40,13 @@
 \resumeItemListEnd
 
 \resumeExp
-{Cisco}
+{Cisco Systems}
 {Software Engineering Intern, Cloud and Network Security}
 {May 2019 - July 2019}
 {Bengaluru, India}
 
 \resumeItemListStart
-\item[$\bullet$]{Built an end-to-end health monitoring system with Prometheus and Grafana for Cisco's Firewalls}
+\item[$\bullet$]{Built an end-to-end health monitoring system with Prometheus and Grafana for Cisco Systems's Firewalls}
 	\item[$\bullet$]{Wrote exporter programs using GoLang to serve real-time telemetry data to dashboards}
 	\item[$\bullet$]{Improved debugging capabilities with correlated dashboards and automated visual alerts}
 \resumeItemListEnd
