--- a/content/projects.tex
+++ b/content/projects.tex
@@ -5,7 +5,7 @@
 {Connected Courses}
 {Georgia Tech} %Project Name, Location Name
 {} %Event Dates
-{\href{https://github.com/}{git.io/xxxx}} 
+{\href{https://github.com/sankalp-sangle/connected-courses}{\emph{Link to code}}} 
 \resumeItemListStart
     \item[$\bullet$]{Modelled college courses, instructors and classrooms in Neo4j to create a timetable recommendation system}
 	\item[$\bullet$]{Considered user inputs: location, instructor, time, field to automate CypherQL query generation and ranking of course plans}
@@ -17,7 +17,7 @@
 {BOB - Bot of BITS} %Project Name
 {BITS Pilani} %Project Name, Location Name
 {} %Event Dates
-{\href{https://github.com/}{git.io/xxxx}} %Website
+{\href{https://github.com/rahul-bothra/bob-the-bot}{\emph{Link to code}}} %Website
 \resumeItemListStart
 \item[$\bullet$]{Built a cloud chatbot in Python to answer campus queries of students through Facebook Messenger platform}
 	\item[$\bullet$]{Employed keyword indexing, normalization and spell correction algorithms to refine user queries}
@@ -28,7 +28,7 @@
 {MapReduce Framework Implementation} %Project Name
 {Georgia Tech} %Project Name, Location Name
 {} %Event Dates
-{\href{https://github.com/}{git.io/xxxx}} %Website
+{\href{https://github.com/sankalp-sangle/AOSP4}{\emph{Link to code}}} %Website
 \resumeItemListStart
 \item[$\bullet$]{Used gRPC to build a MapReduce Framework with a Master, Mappers and Reducers}
 	\item[$\bullet$]{Implemented input sharding, queuing and RPC timeout mechanisms to handle worker failures}
