--- a/content/additional.tex
+++ b/content/additional.tex
@@ -3,7 +3,9 @@
 
 
 \small{\begin{tabular*}{\textwidth}[t]{p{\textwidth}}
-\hspace{-3.1mm}\textbf{ Leadership: }{Deep Learning, Data Structures and Algorithms, Databases, Operating Systems, Computer Networks}\\
+\hspace{-3.1mm}\textbf{ Leadership: }{Head of Stage Controls, a 50 member group 
+responsible for conducting events in the college auditorium} \\ 
+\hspace{-3.1mm}\hspace{20mm}{Head Teaching Assistant, Computer Programming (1000 students) | BITS ACM - Linux SIG Head} \\
 \hspace{-3.1mm}\textbf{ Achievements: }{KVPY Scholar | All India Rank 293 in JEE Mains 2016 | Black Belt Shotokan Karate, National Level Medalist
 }
 \end{tabular*}}
