--- a/content/experience.tex
+++ b/content/experience.tex
@@ -10,7 +10,7 @@
 \resumeItemListStart
 \item[$\bullet$] Wrote a GraphQL-based Flask backend-service to serve data to 1000s of Bloomberg Professional App users
 \item[$\bullet$] Upgraded authorization systems of legacy Bloomberg services to JSON Web Tokens (JWT)
-\item[$\bullet$] Rewrote existing C\# services as Python microservices, improving turnaround time and maintainability
+\item[$\bullet$] Rewrote existing C\# services as Python microservices, improving maintainability and turnaround time from weeks to hours
 \resumeItemListEnd
 
 
