Updated after 2 years

--- a/content/education.tex
+++ b/content/education.tex
@@ -3,15 +3,17 @@
 
 \resumeSubHeadingListStart
 \resumeEdu
-{Georgia Institute of Technology (Georgia Tech)} 
-{M.S. in Computer Science} 
-{Aug 2021 - May 2023} %Event Dates
-{GPA: 4.0/4.0} %Website
+{Georgia Tech} 
+{M.S. in Computer Science, Head TA: Graduate Database Systems and Concepts} 
+{Aug 2021 - May 2023}
+{GPA: 4.0/4.0}
+{Relevant coursework: Machine Learning, Advanced Operating Systems}
 \\
 \resumeEdu
-{Birla Institute of Technology and Science (BITS Pilani), India} 
-{B.Eng. in Computer Science} 
-{Aug 2016 - July 2020} %Event Dates
-{GPA: 8.90/10.0} %Website
+{Birla Institute of Technology and Science, Pilani} 
+{B.E. in Computer Science, Head TA: Intro Programming in C} 
+{Aug 2016 - July 2020}
+{GPA: 8.90/10.0}
+{Relevant coursework: Probability and Statistics, Linear Algebra, Network Programming, Principles of Economics}
 \resumeSubHeadingListEnd
 \vspace{-3.5mm}
