--- a/content/experience.tex
+++ b/content/experience.tex
@@ -3,16 +3,25 @@
 
 \resumeExp
 {Bloomberg LP}
-{Software Engineering Intern, Philanthropy Engineering}
-{Jun 2022 - Aug 2022}
+{Software Engineer, Economics Data Engineering}
+{Jul 2023 - Present}
 {New York City, NY}
 
 \resumeItemListStart
-\item[$\bullet$] Wrote a GraphQL-based Flask backend-service to serve data to 1000s of Bloomberg Professional App users
-\item[$\bullet$] Upgraded authorization systems of legacy Bloomberg services to JSON Web Tokens (JWT)
-\item[$\bullet$] Rewrote existing C\# services as Python microservices, improving maintainability and turnaround time from weeks to hours
+\item[$\bullet$] Developer in Economics - Bloomberg's organization that provides Worldwide Macroeconomics Data to clients
+\item[$\bullet$] Drove efforts across Product, Data and Engineering for wholescale redesign of BQL backend service
+\item[$\bullet$] Achieved a 60\% speedup in client BQL queries by rearchitecting querying infrastructure for Apache SOLR
+\item[$\bullet$] Implemented daily regression testing pipelines, reducing time to detect code regressions from multiple days to 24 hours
+\item[$\bullet$] Developed GraphQL interface for database access, streamlining client data retrieval and reducing feature delivery time
 \resumeItemListEnd
 
+\resumeSubExp{Software Engineering Intern, Philanthropy Engineering}{Jun 2022 - Aug 2022}
+
+\resumeItemListStart
+\item[$\bullet$] Developed a GraphQL-based Flask backend-service to serve data to 10000s of Bloomberg Professional App users
+\item[$\bullet$] Improved feature delivery time from weeks to hours by rewriting existing C\# services as Python microservices
+\item[$\bullet$] Modernized authorization systems of legacy Bloomberg services using JSON Web Tokens (JWT)
+\resumeItemListEnd
 
 \resumeExp
 {Cisco Systems}
@@ -21,34 +30,30 @@
 {Bengaluru, India}
 
 \resumeItemListStart
-\item[$\bullet$] Implemented memory profiling from ground-up in C++, increasing visibility into per-component memory usage
-        \item[$\bullet$] Integrated memory usage time-series with Grafana dashboards, greatly improving failure-diagnosis time for memory crashes
+		\item[$\bullet$] Enhanced visibility into memory usage, with minimal performance impact, by implementing C++ memory profiling from ground-up
+        \item[$\bullet$] Reduced failure-diagnosis time for OOM crashes by integrating memory usage time-series with Grafana dashboards
         \item[$\bullet$] Developed a detection plugin for Cisco's firewalls to identify and prune elephant flows in the network
         \item[$\bullet$] Wrote Telegraf input plugins using GoLang to export CPU and Process related information to health-monitoring dashboards
 \resumeItemListEnd
 
+\resumeSubExp{Software Engineering Intern, Cloud and Network Security}{May 2019 - July 2019}
+
+\resumeItemListStart
+\item[$\bullet$]{Built an end-to-end health monitoring system with Prometheus and Grafana for Cisco Systems' Firewalls}
+	\item[$\bullet$]{Wrote exporter programs using GoLang to serve real-time telemetry data to dashboards}
+	\item[$\bullet$]{Improved debugging capabilities with correlated dashboards and automated visual alerts}
+\resumeItemListEnd
+
 \resumeExp
-{NUS Singapore}
-{Intern, Systems and Networks Group}
+{Networks and Systems Lab, National University of Singapore}
+{Research Assistant with Prof. Chan Mun Choon, Systems and Networks Group}
 {Jan 2020 - Jun 2020}
 {Singapore}
 
 \resumeItemListStart
-\item[$\bullet$] {Conducted thesis work on Network Visualization in Data Centres as part of a Facebook grant}
-	    \item[$\bullet$] {Developed a network replay tool with Docker, Flask and D3.js for failure detection by correlating millions of switch packet records}
+\item[$\bullet$] {Performed thesis work on Network Visualization in Data Centres as part of a Facebook/Meta grant}
+	    \item[$\bullet$] {Developed a network flow replay tool with Docker, Flask and D3.js for failure detection by correlating millions of switch packet records}
 	    \item[$\bullet$] {Improved root-cause detection of network faults, reducing failure-diagnosis time from hours to under 5 minutes} 
-\resumeItemListEnd
-
-\resumeExp
-{Cisco Systems}
-{Software Engineering Intern, Cloud and Network Security}
-{May 2019 - July 2019}
-{Bengaluru, India}
-
-\resumeItemListStart
-\item[$\bullet$]{Built an end-to-end health monitoring system with Prometheus and Grafana for Cisco Systems's Firewalls}
-	\item[$\bullet$]{Wrote exporter programs using GoLang to serve real-time telemetry data to dashboards}
-	\item[$\bullet$]{Improved debugging capabilities with correlated dashboards and automated visual alerts}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
