--- a/content/skills.tex
+++ b/content/skills.tex
@@ -3,8 +3,10 @@
 
 \small{\begin{tabular*}{\textwidth}[t]{p{0.5\textwidth} p{0.5\textwidth}}
 
-\hspace{-3.1mm}{\textbf{ Languages:} C++, C, Python, Java, Go} & {\textbf{Web Technologies:} Flask + Gunicorn, HTML/CSS/JS} \\  
-\hspace{-3.1mm}{\textbf{ Databases:} PostGRES, Mongo, Neo4j, Prometheus} & {\textbf{Miscellaneous:} Docker, GraphQL, Git, Grafana, Telegraf}
+\hspace{-3.1mm}{\textbf{ Languages:} C++, C, Python, Go, SQL} & {\textbf{Dev Tooling:} Git, GitHub, Unix Command line, Docker} \\  
+\hspace{-3.1mm}{\textbf{ Databases:} Postgres, MongoDB, Neo4j, Prometheus, Apache Solr} & {\textbf{Web Tech:} Flask, Nginx, Gunicorn, HTML/CSS/JS} \\
+\hspace{-3.1mm}{\textbf{ Middleware:} Apache Kafka, Redis, Memcached} & {\textbf{Miscellaneous:} GraphQL, Grafana, Telegraf}
+
 \end{tabular*}}
 
 \vspace{-2.5mm}
