--- a/content/projects.tex
+++ b/content/projects.tex
@@ -3,20 +3,18 @@
 
 \resumeProject
 {Connected Courses}
-{Georgia Tech} %Project Name, Location Name
-{} %Event Dates
+{Full-stack, Graph data modelling, CypherQL}
 {\href{https://github.com/sankalp-sangle/connected-courses}{\emph{Link to code}}} 
 \resumeItemListStart
-    \item[$\bullet$]{Modelled college courses, instructors and classrooms in Neo4j to create a timetable recommendation system}
+    \item[$\bullet$]{Modelled college courses, instructors and classrooms in Neo4j to create a timetable recommendation system web application}
 	\item[$\bullet$]{Considered user inputs: location, instructor, time, field to automate CypherQL query generation and ranking of course plans}
 	\item[$\bullet$]{Reduced the time taken by students to decide a course plan from 3-4 hours to 5 minutes}
 \resumeItemListEnd
 
 
 \resumeProject
-{BOB - Bot of BITS} %Project Name
-{BITS Pilani} %Project Name, Location Name
-{} %Event Dates
+{BOB - Bot of BITS}
+{Information Retrieval, Python, Heroku}
 {\href{https://github.com/rahul-bothra/bob-the-bot}{\emph{Link to code}}} %Website
 \resumeItemListStart
 \item[$\bullet$]{Built a cloud chatbot in Python to answer campus queries of students through Facebook Messenger platform}
@@ -25,12 +23,11 @@
 \resumeItemListEnd
 
 \resumeProject
-{MapReduce Framework Implementation} %Project Name
-{Georgia Tech} %Project Name, Location Name
-{} %Event Dates
+{MapReduce Framework Implementation}
+{}
 {\href{https://github.com/sankalp-sangle/AOSP4}{\emph{Link to code}}} %Website
 \resumeItemListStart
-\item[$\bullet$]{Used gRPC to build a MapReduce Framework with a Master, Mappers and Reducers}
+\item[$\bullet$]{Used gRPC to build a minimal MapReduce Framework with a Master, Mappers and Reducers}
 	\item[$\bullet$]{Implemented input sharding, queuing and RPC timeout mechanisms to handle worker failures}
 \resumeItemListEnd
 
