Remove relevant coursework

--- a/main.tex
+++ b/main.tex
@@ -81,14 +81,13 @@
 \vspace{-9.5mm}
 }
 
-\newcommand{\resumeEdu}[5]{
+\newcommand{\resumeEdu}[4]{
 \vspace{0mm}\item[]
-\begin{tabular*}{\textwidth}[t]{l@{\extracolsep{\fill}}r}
-\hspace{-4.3mm} \small\textbf{#1} & \footnotesize{\emph{#3}}\vspace{-1mm} \\
-\hspace{-4.3mm} \footnotesize{#2} & \footnotesize{#4} \\
-\hspace{-4.3mm} \footnotesize{#5} &
-\end{tabular*}
-\vspace{-3.2mm}
+    \begin{tabular*}{\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \hspace{-4.3mm} \small\textbf{#1} & \footnotesize{\emph{#3}}\vspace{-1mm} \\
+        \hspace{-4.3mm} \footnotesize{#2} & \footnotesize{#4}
+    \end{tabular*}
+    \vspace{-3.2mm}
 }
 
 \newcommand{\resumeAchieve}[3]
