Sanjal resume start

--- a/content/education.tex
+++ b/content/education.tex
@@ -1,18 +1,65 @@
-\vspace{-2.5mm}
 \section{Education}
-
 \resumeSubHeadingListStart
-\resumeEdu
-{Georgia Tech} 
-{M.S. in Computer Science, Head TA: Graduate Database Systems and Concepts} 
-{Aug 2021 - May 2023}
-{GPA: 4.0/4.0}
-\\
-\resumeEdu
-{Birla Institute of Technology and Science, Pilani} 
-{B.E. in Computer Science, Head TA: Intro Programming in C} 
-{Aug 2016 - July 2020}
-{GPA: 8.90/10.0}
+
+\resumeExp
+{Maharashtra University of Health Sciences (MUHS)}
+{Third year, BJGMC and SGH}
+{Feb 2024 - Present}
+{Pune, India}
+
+\resumeItemListStart
+\item[$\bullet$] Studying Ophthalmology, Otorhinolaryngology, Preventive and Social Medicine and Forensic Medicine and Toxicology
+\item[$\bullet$] Currently completed 28 weeks of Clinical Postings, including 4 weeks each of Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Community Medicine, Ophthalmology and Otorhinolaryngology
+\item[$\bullet$] Set to complete 42 weeks of Clinical postings by December, 2024
+\resumeItemListEnd
+
+\resumeSubExp{Second Year, BJGMC and SGH}{Feb 2023 - Jan 2024}
+
+\resumeItemListStart
+\item[$\bullet$] Set to complete 42 weeks of Clinical postings by December, 2024.
+\item[$\bullet$] Scored 72\% in the University examinations with Distinction in Microbiology and Pharmacology
+\item[$\bullet$] Completed 42 weeks of Clinical rotations, including 4 weeks each of Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Community Medicine  and 2 weeks each of Psychiatry and Radiology
+\resumeItemListEnd
+
+\resumeSubExp{First Year, BJGMC and SGH}{Feb 2022 - Jan 2023}
+
+\resumeItemListStart
+\item[$\bullet$] Studied Anatomy, Biochemistry and Physiology
+\item[$\bullet$] Scored 75.5\% in the University examinations with Distinction in all subjects
+\resumeItemListEnd
+
+\resumeExp
+{National Eligibility cum Entrace Test (NEET 2021)}
+{Rank 417 out of 1.6 million students nationwide}
+{September 2021}
+{Pune, India}
+
+\resumeItemListStart
+		\item[$\bullet$] Scored 690 out of 720 marks with 360/360 in Biology, 170/180 in Chemistry and 160/180 in Physics
+        \item[$\bullet$] Amongst the top 0.001 percentile students who appeared for the examination in the country
+\resumeItemListEnd
+
+\resumeExp
+{Higher Secondary Certificate (HSC)}
+{92.17\%, Valedictorian of Fergusson College}
+{Jun 2019 - Aug 2021}
+{Pune, India}
+
+\resumeItemListStart
+        \item[$\bullet$] {Studied Biology, Chemistry, English Literature, Mathematics and Physics}
+	    \item[$\bullet$] {Scored 92.17\% in  Board examinations and stood second in the University}
+\resumeItemListEnd
+
+\resumeExp
+{Indian Certificate of Secondary Education (ICSE)}
+{98.40\%, Valedictorian of The Bishop's Co-Ed School, Pune}
+{Jun 2006 - Feb 2019}
+{Pune, India}
+
+\resumeItemListStart
+        \item[$\bullet$] {Scored 98.4\% in the ICSE Board examinations 2019}
+\resumeItemListEnd
+
 
 \resumeSubHeadingListEnd
-\vspace{-3.5mm}
+\vspace{-5.5mm}
