--- a/content/heading.tex
+++ b/content/heading.tex
@@ -3,6 +3,6 @@
 \end{center}
 \vspace{-6.5mm}
 \begin{center}
-    \small{\href{https://github.com/\github}{\faGithub \hspace{0.2mm} github.com/\github} |  \href{https://www.linkedin.com/in/\linkedin/}{\faLinkedin \hspace{0.2mm} linkedin.com/in/\linkedin} | \href{mailto:\emaila}{\faEnvelope \hspace{0.2mm} \emaila} | \faPhone \hspace{0.2mm} +1-\phone }
+    \small{\href{mailto:\emaila}{\faEnvelope \hspace{0.2mm} \emaila} | \faPhone \hspace{0.2mm} \phone \hspace{0.2mm} | \hspace{0.2mm} \location}
 \end{center}
 \vspace{-3mm}
