--- a/main.tex
+++ b/main.tex
@@ -118,14 +118,15 @@
 %-------------------------------------------
 %%%%%%  CV STARTS HERE  %%%%%%%%%%%
 
-\newcommand{\name}{Sankalp Sangle} % Your Name
+\newcommand{\name}{Sanjal Sangle} % Your Name
 \newcommand{\course}{B.Tech -Computer Science and Engineering} % Your Course
 \newcommand{\roll}{xxxxxxxx} % Your Roll No.
-\newcommand{\phone}{(240)-810-9765} % Your Phone Number
-\newcommand{\emaila}{sankalpsangle98@gmail.com} %Email 1
-\newcommand{\github}{sankalp-sangle} %Github
-\newcommand{\website}{https://sankalpsangle.com} %Website
-\newcommand{\linkedin}{sankalp-sangle} %linkedin
+\newcommand{\phone}{+91 7755947300} % Your Phone Number
+\newcommand{\emaila}{sanjalsangle313@gmail.com} %Email 1
+\newcommand{\github}{} %Github
+\newcommand{\website}{} %Website
+\newcommand{\linkedin}{} %linkedin
+\newcommand{\location}{Pune, India} %location
 
 % ------------------FONT STUFF---------------------
 \usepackage[sfdefault]{FiraSans}
@@ -138,14 +139,14 @@
 %----------HEADING-----------------
 \input{content/heading.tex}
 
+%----------ABOUT ME-----------------
+\input{content/about.tex}
+
 %-----------EDUCATION-----------------
 \input{content/education.tex}
 
-%-----------EXPERIENCE-----------------
-\input{content/experience}
-
-%-----------PROJECTS-----------------
-\input{content/projects.tex}
+%-----------RESEARCH AND PUBLICATIONS-----------------
+\input{content/research_and_publications.tex}
 
 %-----------SKILLS-----------------
 \input{content/skills.tex}
