--- a/content/about.tex
+++ b/content/about.tex
@@ -1,7 +1,8 @@
 % \vspace{-2.5mm}
 \section{About me}
-    I’m a third year (junior) medical student pursuing M.B.B.S (Bachelor of Medicine, Bachelor of Surgery)
+    \vspace{2.5mm}
+    \small{I’m a third year (junior) medical student pursuing M.B.B.S (Bachelor of Medicine, Bachelor of Surgery)
     at the Byramjee Jeejeebhoy Govt. Medical College and David Sassoon General Hospital in Pune, India.
-    My interests are in Internal Medicine, Diagnostic and Interventional Radiology and Dermatology.
+    My interests are in Internal Medicine, Diagnostic and Interventional Radiology, and Dermatology.}
 
-    % \vspace{-2.5mm}
+    \vspace{-2.5mm}
