--- a/content/education.tex
+++ b/content/education.tex
@@ -9,15 +9,14 @@
 
 \resumeItemListStart
 \item[$\bullet$] Studying Ophthalmology, Otorhinolaryngology, Preventive and Social Medicine and Forensic Medicine and Toxicology
-\item[$\bullet$] Currently completed 28 weeks of Clinical Postings, including 4 weeks each of Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Community Medicine, Ophthalmology and Otorhinolaryngology
+\item[$\bullet$] Currently completed 28 weeks of Clinical postings, including 4 weeks each of Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Community Medicine, Ophthalmology and Otorhinolaryngology
 \item[$\bullet$] Set to complete 42 weeks of Clinical postings by December, 2024
 \resumeItemListEnd
 
 \resumeSubExp{Second Year, BJGMC and SGH}{Feb 2023 - Jan 2024}
 
 \resumeItemListStart
-\item[$\bullet$] Set to complete 42 weeks of Clinical postings by December, 2024.
-\item[$\bullet$] Scored 72\% in the University examinations with Distinction in Microbiology and Pharmacology
+\item[$\bullet$] Scored 72\% in the University examinations with \textbf{Distinction in Microbiology and Pharmacology}
 \item[$\bullet$] Completed 42 weeks of Clinical rotations, including 4 weeks each of Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Community Medicine  and 2 weeks each of Psychiatry and Radiology
 \resumeItemListEnd
 
@@ -25,18 +24,18 @@
 
 \resumeItemListStart
 \item[$\bullet$] Studied Anatomy, Biochemistry and Physiology
-\item[$\bullet$] Scored 75.5\% in the University examinations with Distinction in all subjects
+\item[$\bullet$] Scored 75.5\% in the University examinations with \textbf{Distinction in all subjects}
 \resumeItemListEnd
 
 \resumeExp
-{National Eligibility cum Entrace Test (NEET 2021)}
-{Rank 417 out of 1.6 million students nationwide}
-{September 2021}
+{National Eligibility cum Entrance Test (NEET 2021)}
+{\textbf{All India Rank 417 out of 1.6 million} students}
+{Sep 2021}
 {Pune, India}
 
 \resumeItemListStart
 		\item[$\bullet$] Scored 690 out of 720 marks with 360/360 in Biology, 170/180 in Chemistry and 160/180 in Physics
-        \item[$\bullet$] Amongst the top 0.001 percentile students who appeared for the examination in the country
+        \item[$\bullet$] Amongst the \textbf{top 0.001 percentile students} who appeared for the examination in the country
 \resumeItemListEnd
 
 \resumeExp
@@ -47,7 +46,7 @@
 
 \resumeItemListStart
         \item[$\bullet$] {Studied Biology, Chemistry, English Literature, Mathematics and Physics}
-	    \item[$\bullet$] {Scored 92.17\% in  Board examinations and stood second in the University}
+	    \item[$\bullet$] {Scored 92.17\% in Board examinations and ranked second in the University}
 \resumeItemListEnd
 
 \resumeExp
